<resources>
    <string name="app_name">ToDo Tree</string>
    <string name="quick_add_app_name">ToDo Temp</string>
    <string name="app_name_push_que">ToDo Iro</string>
    <string name="app_name_nav" translatable="false">ToDo Tree</string>

    <string name="action_minimize">🙈 Minimize</string>
    <string name="action_exit_without_saving">❌ Exit without saving</string>
    <string name="action_save_exit">💾 Save and exit</string>
    <string name="action_reload">🔄 Reload</string>
    <string name="action_save">💾 Save</string>

    <string name="example_item">Example Item content long long long long time ago</string>
    <string name="list_txt">List:</string>
    <string name="editButton">Edit</string>
    <string name="button_save">Save</string>
    <string name="buttonEditCancel">Cancel</string>

    <string name="action_info_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_undo">Undo</string>
    <string name="tooltip">Hint</string>
    <string name="action_confirmation_title">Are you sure?</string>
    <string name="nav_settings">Settings</string>
    <string name="error_occurred_s">Error: %s</string>
    <string name="error_details">Details</string>
    <string name="error_occurred">Error occurred</string>
    <string name="communication_breakdown">Communication breakdown: %s</string>

    <string name="action_copy">📄 Copy</string>
    <string name="action_cut">✂️ Cut</string>
    <string name="action_paste">📋 Paste</string>
    <string name="action_select_all">☑️ Select all</string>
    <string name="button_save_and_add">+ add</string>
    <string name="button_save_and_go_into">+ go into</string>
    <string name="buttonEditInsertTime">HH:mm</string>
    <string name="buttonEditInsertDate">dd.MM.yy</string>
    <string name="buttonEditInsertRange">-</string>
    <string name="buttonEditInsertNumber">12,34</string>
    <string name="action_goto_root">Go to root</string>
    <string name="action_sum_selected">Sum selected</string>
    <string name="action_restore_backup">⏮️ Restore backup</string>
    <string name="exitScreenMessage">Closing…</string>
    <string name="action_show_statistics">Statistics</string>
    <string name="action_go_up">⬆️ Go up</string>
    <string name="action_notify">Summary</string>
    <string name="action_enter_command">⌨️ Enter command</string>
    <string name="import_operation_canceled">Import cancelled</string>
    <string name="file_manager_not_found">File manager not found</string>
    <string name="selected_file_is_too_big">Selected file is too big</string>
    <string name="action_import_db">📂 Import database</string>
    <string name="action_open_drawer">🗄️ Open drawer</string>
</resources>
