<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
        android:id="@+id/action_minimize"
        android:orderInCategory="100"
        android:title="@string/action_minimize"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_reload"
        android:orderInCategory="100"
        android:title="@string/action_reload"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/action_save"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_exit_without_saving"
        android:orderInCategory="100"
        android:title="@string/action_exit_without_saving"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_copy"
        android:orderInCategory="100"
        android:title="@string/action_copy"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_cut"
        android:orderInCategory="100"
        android:title="@string/action_cut"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_paste"
        android:orderInCategory="100"
        android:title="@string/action_paste"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_select_all"
        android:orderInCategory="100"
        android:title="@string/action_select_all"
        app:showAsAction="never"/>

    <!--<item-->
        <!--android:id="@+id/action_goto_root"-->
        <!--android:orderInCategory="200"-->
        <!--android:title="@string/action_goto_root"-->
        <!--android:icon="@drawable/ic_menu_home"-->
        <!--app:showAsAction="ifRoom"/>-->
    <item
        android:id="@+id/action_save_exit"
        android:orderInCategory="300"
        android:title="@string/action_save_exit"
        android:icon="@drawable/ic_menu_save"
        app:showAsAction="ifRoom"/>
</menu>
