<?xml version="1.0" encoding="utf-8"?>

<FrameLayout android:id="@+id/frameEditItem"
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:appControllerService="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dp"
            appControllerService:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="igrek.todotree.activity.MainActivity">


            <igrek.todotree.ui.edititem.ItemEditText
                android:id="@+id/etEditItemContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_gravity="left|center_vertical"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:scrollHorizontally="false"
                android:minLines="1"
                android:lines="32"
                android:maxLines="100"
                android:paddingBottom="16dp"
                android:paddingTop="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="0dp">

                <Button
                    android:id="@+id/buttonSaveItem"
                    style="@style/AppThemeEditButtons"
                    android:layout_width="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/button_save"/>

                <Button
                    android:id="@+id/buttonSaveAndAddItem"
                    style="@style/AppThemeEditButtons"
                    android:layout_width="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.5"
                    android:text="@string/button_save_and_add"/>

                <Button
                    android:id="@+id/buttonSaveAndGoInto"
                    style="@style/AppThemeEditButtons"
                    android:layout_width="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.5"
                    android:text="@string/button_save_and_go_into"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="0dp">

                <ImageButton
                    android:id="@+id/quickEditGoBegin"
                    style="@style/AppThemeEditButtons"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_media_previous"/>

                <ImageButton
                    android:id="@+id/quickEditGoLeft"
                    style="@style/AppThemeEditButtons"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_media_rew"/>

                <ImageButton
                    android:id="@+id/quickEditSelectAll"
                    style="@style/AppThemeEditButtons"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_media_fullscreen"/>

                <ImageButton
                    android:id="@+id/quickEditGoRight"
                    style="@style/AppThemeEditButtons"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_media_ff"/>

                <ImageButton
                    android:id="@+id/quickEditGoEnd"
                    style="@style/AppThemeEditButtons"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_media_next"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="0dp">

                <Button
                    android:id="@+id/buttonEditInsertTime"
                    style="@style/AppThemeEditButtons"
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:text="@string/buttonEditInsertTime"/>

                <Button
                    android:id="@+id/buttonEditInsertDate"
                    style="@style/AppThemeEditButtons"
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:text="@string/buttonEditInsertDate"/>

                <Button
                    android:id="@+id/buttonEditInsertRange"
                    style="@style/AppThemeEditButtons"
                    android:layout_width="0dp"
                    android:layout_weight="0.15"
                    android:text="@string/buttonEditInsertRange"/>

                <Button
                    android:id="@+id/buttonEditInsertNumber"
                    style="@style/AppThemeEditButtons"
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:text="@string/buttonEditInsertNumber"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="0dp">

                <Button
                    android:id="@+id/buttonEditCancel"
                    style="@style/AppThemeEditButtons"
                    android:layout_width="0dp"
                    android:layout_weight="0.25"
                    android:text="@string/buttonEditCancel"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <ImageButton
                    android:id="@+id/rotateScreenBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="5dp"
                    android:background="@android:drawable/ic_menu_always_landscape_portrait"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    style="@style/AppThemeEditButtons" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <igrek.todotree.ui.numkeyboard.NumericKeyboardView
        android:id="@+id/numericKeyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone"/>

</FrameLayout>